fix wrapping in ff

--- a/src/styles/landing/article-sign-up.scss
+++ b/src/styles/landing/article-sign-up.scss
@@ -35,7 +35,7 @@
     font-size: 16px;
     line-height: 1.4;
     margin: 0;
-    padding: 15px 6px 15px 72px;
+    padding: 15px 6px 15px 69px;
     position: relative;
 
     @include media(xxs) {
